# ASC-HPC

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-single-platform.yml
demos/: demo_simd.cc  demo_simd.cpp  demo_tasks.cc  demo_tasks.cpp  simd_timings.cc  simd_timings.cpp  timing_mem.cc  timing_mem.cpp
src/: main.cpp  simd.h  simd.hpp  simd_arm64.h  simd_arm64.hpp  simd_avx.h  simd_avx.hpp  simd_bitonic.hpp  simd_math.hpp  taskmanager.cc  taskmanager.cpp  taskmanager.h  test  timer.cc  timer.cpp  timer.h  timer.hpp
